Closed
Bug 1409025
Opened 6 years ago
Closed 6 years ago
FocusState.cpp doesn't compile with logging enabled
Categories
(Core :: Panning and Zooming, defect)
Core
Panning and Zooming
Tracking
()
RESOLVED
FIXED
mozilla58
Tracking | Status | |
---|---|---|
firefox58 | --- | fixed |
People
(Reporter: kats, Assigned: kats)
References
Details
Attachments
(1 file)
Regression from bug 1383816, aState.mType doesn't exist any more http://searchfox.org/mozilla-central/rev/40b456626e2d0409b7034768b4d9526fc7235ea4/gfx/layers/apz/src/FocusState.cpp#49
Comment hidden (mozreview-request) |
Comment 2•6 years ago
|
||
mozreview-review |
Comment on attachment 8918883 [details] Bug 1409025 - Fix build with FocusState.cpp logging enabled. https://reviewboard.mozilla.org/r/189762/#review194954
Attachment #8918883 -
Flags: review?(botond) → review+
Pushed by kgupta@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a92c8453d93d Fix build with FocusState.cpp logging enabled. r=botond
![]() |
||
Comment 4•6 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/a92c8453d93d
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox58:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
You need to log in
before you can comment on or make changes to this bug.
Description
•