Bug 1409025 - Fix build with FocusState.cpp logging enabled. r=botond

MozReview-Commit-ID: 4n3tqnPkPPa